--- a/app/src/main/res/layout/recipes_fragment.xml
+++ b/app/src/main/res/layout/recipes_fragment.xml
@@ -6,12 +6,25 @@
     android:layout_height="match_parent"
     android:background="#E8DFDF"
     tools:context=".ui.Recipes.RecipesFragment">
-
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:shimmer_duration="800">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <include layout="@layout/custom_placeholder_layout"/>
+            <include layout="@layout/custom_placeholder_layout"/>
+            <include layout="@layout/custom_placeholder_layout"/>
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="10dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
