--- a/app/src/main/res/layout/lost_connection.xml
+++ b/app/src/main/res/layout/lost_connection.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8DFDF"
-    tools:context=".ui.Recipes.RecipesFragment"/>
+    tools:context=".ui.fragment.Recipes.RecipesFragment"/>
