--- a/app/src/main/res/layout/recipes_fragment.xml
+++ b/app/src/main/res/layout/recipes_fragment.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8DFDF"
-    tools:context=".ui.Recipes.RecipesFragment">
+    tools:context=".ui.fragment.Recipes.RecipesFragment">
     <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerFragmentPlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:shimmer_duration="800">
@@ -24,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="10dp"
-        android:visibility="gone"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="3"
-        tools:listitem="@layout/custom_recyle_layout" />
+        tools:listitem="@layout/recipes_row_layout" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
